--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
         <div class="container">
             <div class="cta-content">
                 <h2>Ready to Transform Your Incident Response?</h2>
-                <p>Join <span id="footer-waitlist-count">hundreds of</span> security professionals and be among the first to experience automated security simulations.</p>
+                <p>Join to the waitlist and be among the first to experience automated security simulations.</p>
                 <div class="email-form">
                     <form action="https://formspree.io/f/xjkozgbe" method="POST" id="footer-formspree-form">
                         <input type="email" name="email" placeholder="Enter your email" id="footer-email" required>
@@ -690,12 +690,6 @@
                 <div class="social-links">
                     <a href="https://github.com/Stuxend/siras" target="_blank" class="social-link">
                         <i class="fab fa-github"></i>
-                    </a>
-                    <a href="#" class="social-link">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="#" class="social-link">
-                        <i class="fab fa-linkedin"></i>
                     </a>
                 </div>
             </div>
@@ -724,12 +718,12 @@
                     <a href="https://github.com/Stuxend/siras" target="_blank">Documentation</a>
                     <a href="https://github.com/Stuxend/siras" target="_blank">GitHub</a>
                 </div>
-                <div class="footer-section">
+                <!-- <div class="footer-section">
                     <h4>Company</h4>
                     <a href="#">About</a>
                     <a href="#">Contact</a>
                     <a href="#">Privacy</a>
-                </div>
+                </div> -->
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 SIRAS. MIT License. Built with ❤️ for the security community.</p>
